@@ -1,6 +1,24 @@
 package com.github.soil.basis.vm;
 
 /**
+*  -XX：PretenureSizeThreshold参数只对Serial和ParNew两款新生代收集器有效
+ *     VM参数：
+*       -verbose:gc
+*      -Xms20M
+*       -Xmx20M
+*       -Xmn10M
+*       -XX:+PrintGCDetails
+*       -XX:MaxTenuringThreshold=16
+*       -XX:+PrintTenuringDistribution
+*        -Xms10M
+*       -XX:TargetSurvivorRatio=60
+*   -XX:+PrintGCDateStamps
+*  -Xloggc:D:\Java\gc\soil\vm\tenuringThreshold.log
+*   -XX:+PrintClassHistogram
+*  -XX:+UseConcMarkSweepGC
+ *
+ *       -XX:+UseSerialGC
+ *       -Dfile.encoding=GBK
  * @author tanruidong
  * @date 2020/08/27 17:04
  */
@@ -10,20 +28,7 @@ public class MaxTenuringThresholdTest {
     public static void main(String[] args) {
         testTenuringThreshold();
     }
-    /**
-     * -XX：PretenureSizeThreshold参数只对Serial和ParNew两款新生代收集器有效
-     * VM参数：-verbose:gc
-     * -Xms20M
-     * -Xmx20M
-     * -Xmn10M
-     * -XX:+PrintGCDetails
-     * -XX:SurvivorRatio=8
-     * -XX:MaxTenuringThreshold=1
-     * -XX:+PrintTenuringDistribution
-     *
-     * -XX:+UseSerialGC
-     * -Dfile.encoding=GBK
-     */
+
     public static void testTenuringThreshold() {
         byte[] allocation1, allocation2, allocation3;
         // 什么时候进入老年代决定于XX:MaxTenuringThreshold设置
@@ -32,6 +37,7 @@ public class MaxTenuringThresholdTest {
         allocation3 = new byte[4 * _1MB];
         allocation3 = null;
         allocation3 = new byte[4 * _1MB];
+        System.out.println("结束");
     }
 
 }
